--- a/Profile Biodata_Muhammad Rangga Al Yendra Putra/index.html
+++ b/Profile Biodata_Muhammad Rangga Al Yendra Putra/index.html
@@ -27,7 +27,7 @@
             </section>
             <section class="photo">
                 <div class="circle">
-                    <img class="photo-profile" src="asset/img/rangga.jpg" alt="Photo-profile">
+                    <img class="photo-profile" src="asset/img/Rangga.jpeg" alt="Photo-profile">
                 </div>
             </section>
             <section class="content">
